# acceleration_firmware_kv260

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
cmake/: colcon_ignore.cmake  firmware_setup.cmake  generate_mixin.cmake  ros2_cross.cmake  sysroot.cmake
firmware/: BOARD  SOC
firmware/device_tree/: kernel_default.dtbo  kernel_default.dtsi
firmware/platform/: kv260_custom_platform.xpfm
firmware/platform/sw/: kv260_custom_platform.spfm
firmware/platform/sw/kv260_custom_platform/boot/: bl31.elf  fsbl.elf  linux.bif  system.dtb
firmware/platform/sw/kv260_custom_platform/qemu/: pmu_args.txt  qemu_args.txt
firmware/platform/sw/kv260_custom_platform/xrt/image/: boot.scr.default
firmware/platform/sw/kv260_custom_platform/xrt/qemu/: pmu_args.txt  pmufw.elf  qemu_args.txt
patches/: customize.patch
scripts/: index.yaml.template  kv260.mixin.template
